[package]
name = "lyra2"
version = "0.2.7"
authors = ["wakiyamap <wakiyamap@gmail.com>"]
edition = "2018"

license = "MIT"
description = "Pure rust library in Lyra2, Lyra2RE, Lyra2REv2, Lyra2REv3."
repository = "https://github.com/wakiyamap/lyra2"
readme = "README.md"
keywords = ["lyra2", "Lyra2RE", "Lyra2REv2", "Lyra2REv3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
blake-hash = "0.4.1"
groestl = "0.10.1"
skein-hash = "0.3.1"
digest = "0.10.7"
